# name_gen

./: .gitignore  Makefile  README.md  example01.docx  example02.docx  example03.docx  pyproject.toml  작명Word변환.spec
.claude/: settings.local.json
src/name_gen/: main.py  parser.py  text_writer.py  word_writer.py
src/name_gen/assets/: happy_numbers.xlsx
tests/: test_main.py
