[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "name_gen"
version = "0.1.0"
description = "A name generator project"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.0",
    "openpyxl>=3.0",
]

[project.scripts]
name-gen = "name_gen.main:main"

[tool.setuptools.package-data]
name_gen = ["assets/*.xlsx"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
